@@ -1,1 +1,6 @@
 # java17fmitest
+
+This project investigates the new Java 17 Foreign incubator project.
+The Java 17 [foreign incubator project](https://docs.oracle.com/en/java/javase/17/docs/api/jdk.incubator.foreign/jdk/incubator/foreign/package-summary.html) allows the developer to represent the native interface directly in Java, without requiring a `Java Native Interface` approach.
+
+Remember to add `--enable-native-access=ALL-UNNAMED,tester.seventeen` to VM options.
